--- a/SourceCode/package.json
+++ b/SourceCode/package.json
@@ -16,7 +16,8 @@
     "react-icons": "^3.10.0",
     "react-responsive": "^8.1.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^3.4.1"
+    "react-scripts": "^3.4.1",
+    "reactstrap": "^8.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
