--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "express": "^4.17.1",
     "path": "^0.12.7",
     "react-datepicker": "^3.0.0",
-    "react-icons": "^3.10.0"
+    "react-icons": "^3.10.0",
+    "react-image": "^4.0.1"
   }
 }
