--- a/SourceCode/package.json
+++ b/SourceCode/package.json
@@ -11,6 +11,7 @@
     "firebase": "^7.16.0",
     "js-cookie": "^2.2.1",
     "jspdf": "^1.4.1",
+    "moment": "^2.27.0",
     "path": "^0.12.7",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
