--- a/SourceCode/package.json
+++ b/SourceCode/package.json
@@ -11,6 +11,7 @@
     "firebase": "^7.16.0",
     "js-cookie": "^2.2.1",
     "jspdf": "^1.4.1",
+    "material-ui": "^0.20.2",
     "moment": "^2.27.0",
     "path": "^0.12.7",
     "react": "^16.13.1",
@@ -45,6 +46,8 @@
     ]
   },
   "devDependencies": {
+    "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
     "react-materialize": "^3.9.2"
   }
 }
