--- a/SourceCode/package.json
+++ b/SourceCode/package.json
@@ -7,6 +7,8 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
+    "emailjs": "^3.2.1",
+    "emailjs-com": "^2.6.3",
     "express": "^4.17.1",
     "firebase": "^7.16.0",
     "js-cookie": "^2.2.1",
